<!--
  ~ Copyright (C) 2025 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Notez</string>
    <string name="floating_action_button_des">Add new note</string>
    <string name="date_pattern">MM/dd/YYYY</string>
    <string name="all_notes">All notes</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="trash">Trash</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="drawing_note">Drawing note</string>
    <string name="drawing_title">Drawing title</string>
    <string name="text_note">Text note</string>
    <string name="drawing">Drawing</string>
    <string name="add_note">Add note</string>
    <string name="delete_note">Delete note</string>
    <string name="open_new_window">Open in new window</string>

    <!-- Ink Tools -->
    <string name="brush">Brush</string>
    <string name="brush_size">Brush size</string>
    <string name="custom_brush">Custom brush</string>
    <string name="color">Color</string>
    <string name="eraser">Eraser</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="select_color">Select color</string>
    <string name="dismiss">Dismiss</string>

    <!-- Ink Brush Families -->
    <string name="pressure_pen">Pen</string>
    <string name="marker">Marker</string>
    <string name="highlighter">Highlighter</string>
    <string name="dashed_line">Dashed line</string>

    <string name="note_image_preview">Note image preview</string>
    <string name="drawing_note_indicator">Drawing note indicator</string>
    <string name="untitled_note">Untitled note</string>
    <string name="no_notes_yet">No notes yet.</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="unfavorite">Remove from favorite</string>
    <string name="delete">Delete</string>
    <string name="other_notes">Others</string>
    <string name="add_image">Add image</string>
    <string name="background_image">Background image</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="exit">Exit</string>
    <string name="more_options">More options</string>
    <string name="uploaded_image">Uploaded image</string>
    <string name="uploaded_images">Uploaded images</string>
    <string name="upload_image">Upload image</string>

    <!-- Settings Pane -->
    <string name="notes_role_setting_title">Default notes app</string>
    <string name="notes_role_setting_description">Set this app as the default for handling note-taking actions and capturing content.</string>
    <string name="notes_role_not_available">Notes Role not available on this device/OS version.</string>
    <string name="notes_role_held">This app is the default Notes app.</string>
    <string name="notes_role_not_held">This app is not the default Notes app.</string>
    <string name="set_as_default_notes_app">Set as default</string>
    <string name="navigate_up">Back</string>

    <!-- Confirmation Dialog -->
    <string name="confirm">Confirm</string>
    <string name="replace_image_title">Image upload</string>
    <string name="replace_image_text">Do you want to replace the current image?</string>

</resources>